Fix titlebox-title overlap on dark theme mobile
For smaller mobile browsers sizes like 375px wide, on dark theme,
the titlebox-title background color was overlapping text on the
lines above.  This commit sets background color to transparent for
titlebox-title left so the background color on a wrapped line
doesn't cut off the text above it.

--- a/share/static/css/elevator-dark/main.css
+++ b/share/static/css/elevator-dark/main.css
@@ -339,6 +339,10 @@
     padding-bottom: inherit;
 }
 
+.darkmode .titlebox .titlebox-title .left {
+    background-color: transparent !important;
+}
+
 .darkmode .dropzone,
 .darkmode .dropzone .dz-details {
     border: 1px solid #717171 !important;
